# PrimeStruct

./: .gitignore  AGENTS.md  CMakeLists.txt  MERGE.md  README.md  compile_experimental_soa_vector_push_helpers_exe.psir  debug_vector.psir  default.profraw  graph-local-auto-XXXXXX  ps_math_unused.psir  ps_nomath.psir  repro_map_alias.psir  repro_map_contains_marker.psir  test_custom.psir  test_vector.psir  test_vector_scoped.psir  todo_ray.md
.claude/: settings.json
.githooks/: commit-msg
.primec_test_cache/: primec_cpp_emitter_image_fixture_acaa90d48281f15b.prime  primec_cpp_emitter_result_fixture_1fbfa1e4d53e64ad.prime  primec_cpp_emitter_ui_commands_fixture_35347243ff30c39b.prime  primec_cpp_emitter_ui_events_fixture_6c2e519142d0fd33.prime  primec_cpp_emitter_ui_layout_fixture_a4288c211654dce1.prime  primec_cpp_emitter_ui_login_fixture_0d886d1cb39e594b.prime  primec_cpp_emitter_ui_widgets_fixture_d9d8b3fc82d3d253.prime  spinning_cube_backend_probe.txt
benchmarks/: README.md  aggregate.c  aggregate.cpp  aggregate.prime  aggregate.rs  benchmark_baseline.json  json_parse.c  json_parse.cpp  json_parse.prime  json_parse.rs  json_scan.c  json_scan.cpp  json_scan.prime  json_scan.rs  semantic_memory_baseline_report.json  semantic_memory_budget_policy.json  semantic_memory_budget_policy_debug.json  semantic_memory_phase_one_success_criteria.json  source_location_mapper_lookup_budget.json  type_graph_budget_baseline.json
cmake/: CheckDoctestSuites.cmake  PrimeStructManagedCompileRunEmittersNativeCoreSuites.cmake  PrimeStructManagedCompileRunImportsTextExamplesSuites.cmake  PrimeStructManagedCompileRunNativeOtherSuites.cmake  PrimeStructManagedCompileRunSmokeSuites.cmake  PrimeStructManagedCompileRunSuites.cmake  PrimeStructManagedCompileRunVmSuites.cmake  PrimeStructManagedParserTextMiscSuites.cmake  PrimeStructManagedSemanticsSuites.cmake  PrimeStructManagedUnitBackendSuites.cmake
docs/: CodeExamples.md  CodeQuality.md  Coding_Guidelines.md  CollectionDecoupling.md  FileLayoutRestructuring.md  Graphics_API_Design.md  MathTestSuite.md  MemoryCapabilities.md  MultithreadingPrototype.md  PrimeStruct.md  PrimeStruct_SyntaxSpec.md  Prompts.md  SafeArrayExtentViews.md  SemanticProductConsumerMatrix.md  Semantics_Multithread_Design.md  Semantics_Multithreaded_Pass.md  TODO-4656-manifest-gap-list.md  TuplePrototype.md  changelog.md  failing_tests.md  high_memory_tests_over100mb.txt  high_memory_tests_over100mb_internal_only.txt  memories.md  ownership_runtime_soa_touchpoints.md  semantic_memory_benchmark_policy.md  semantic_memory_phase_one_success_criteria.md  semantic_product_backend_entrypoint_inventory.md  semantic_snapshot_traversal_inventory.md  semantic_symbol_id_migration_inventory.md  source_lock_inventory.md  testcase_log.md  todo.md  todo_finished.md  type_graph_migration_touchpoints.md
examples/: README.md  assign_mutable.prime  binding_value.prime  call_statement.prime  collections.prime  collections_brackets.prime  execute_if.prime  executions.prime  features_overview.prime  forward_definition.prime  gpu_compute.prime  hello_world.prime  hello_world_if.prime  identity_call.prime  if_else.prime  if_expression.prime  infer_method_call.prime  math_pow.prime  namespace_call.prime  operator_plus.prime  param_defaults.prime  pointers_and_references.prime  raytracer.prime  return_void.prime
primec_tests/: ir_backend_registry_add_f64.glsl  ir_backend_registry_address_of_local.glsl  ir_backend_registry_arith_i64.glsl  ir_backend_registry_cmp_eq_f64.glsl  ir_backend_registry_cmp_ge_f64.glsl  ir_backend_registry_cmp_gt_f64.glsl  ir_backend_registry_cmp_i64.glsl  ir_backend_registry_cmp_le_f64.glsl  ir_backend_registry_cmp_lt_f64.glsl  ir_backend_registry_cmp_ne_f64.glsl  ir_backend_registry_cmp_u64.cpp  ir_backend_registry_cmp_u64.glsl  ir_backend_registry_convert_f32_f64.glsl  ir_backend_registry_convert_f32_i64.glsl  ir_backend_registry_convert_f32_u64.glsl  ir_backend_registry_convert_f64_i64_u64.glsl  ir_backend_registry_convert_i32_f64.glsl  ir_backend_registry_convert_i64_u64_f32.glsl  ir_backend_registry_convert_i64_u64_f64.glsl  ir_backend_registry_convert_i64_unused.cpp  ir_backend_registry_convert_u64_unused.cpp  ir_backend_registry_div_f64.glsl  ir_backend_registry_div_u64.glsl  ir_backend_registry_dup_pop_underflow.cpp  ir_backend_registry_f32.cpp  ir_backend_registry_f64_cmp.cpp  ir_backend_registry_f64_convert.cpp  ir_backend_registry_f64_convert_i64.cpp  ir_backend_registry_f64_convert_u64.cpp  ir_backend_registry_f64_math.cpp  ir_backend_registry_file_append.cpp  ir_backend_registry_file_close.glsl  ir_backend_registry_file_flush.glsl  ir_backend_registry_file_io.cpp  ir_backend_registry_file_open_append.glsl  ir_backend_registry_file_read.cpp  ir_backend_registry_file_write.cpp  ir_backend_registry_file_write_byte.cpp  ir_backend_registry_file_write_byte.glsl  ir_backend_registry_file_write_i32.cpp  (+20 more)
scripts/: architecture_health_dashboard.py  benchmark.sh  check_benchmark_report.py  check_graph_budget.py  check_include_layers.py  check_map_adapter_traces.py  check_map_backing_traces.py  check_map_surface_strict_audit.py  check_map_surface_trace_inventory.py  check_map_vector_compiler_knowledge.py  check_semantic_map_wrapper_traces.py  check_semantic_memory_budget.py  check_semantic_memory_phase_one_success.py  check_semantic_memory_trend.py  check_soa_surface_trace_inventory.py  check_test_suite_naming.py  check_vector_surface_traces.py  code_coverage.sh  collect_backtrace.sh  compile.sh  include_layer_allowlist.txt  lines_of_code.sh  manage_expensive_tests.py  preflight_native_spinning_cube_window.sh  rerun_backend_shard.sh  run_browser_spinning_cube.sh  run_canonical_browser_sample.sh  run_canonical_gfx_native_window.sh  run_canonical_metal_host.sh  run_metal_spinning_cube.sh  run_native_spinning_cube_window.sh  run_semantics_tsan_smoke.sh  run_spinning_cube_demo.sh  run_wasm_runtime_checks.sh  run_with_unique_tmpdir.sh  semantic_memory_benchmark.py  semantic_memory_benchmark.sh  semantic_memory_ci_artifacts.py  soa_surface_trace_inventory.txt  (+4 more)
(+2990 files in other folders)
